Kubernetes/Development/Networking_in_Kubernetes/config/ingress-config.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: example.com
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: api-service
            port:
              number: 443
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web-service
            port:
              number: 80
